--- a/about/styles/scss/style.scss
+++ b/about/styles/scss/style.scss
@@ -8,6 +8,7 @@
 @import "../../../src/styles/header";
 @import "../../../src/styles/navigation";
 @import "../../../src/styles/footer";
+@import "../../../src/styles/call-modal";
 
 body {
     font-family: "Montserrat", sans-serif !important;
