--- a/news/css/style.scss
+++ b/news/css/style.scss
@@ -6,6 +6,7 @@
 @import "../../src/styles/header";
 @import "../../src/styles/navigation";
 @import "../../src/styles/footer";
+@import "../../src/styles/call-modal";
 
 @font-face {
   font-family: "Cyrvetica";
