--- a/src/index.scss
+++ b/src/index.scss
@@ -124,4 +124,5 @@ ul {
 @import './styles/news';
 @import './styles/footer';
 @import './styles/contacts';
-@import './styles/_investors_page';
+@import './styles/investors_page';
+@import './styles/call-modal';
