--- a/cabinet/payment/src/css/main.css
+++ b/cabinet/payment/src/css/main.css
@@ -752,6 +752,48 @@ a {
   opacity: .7;
 }
 
+.header__user-name {
+  position: relative;
+}
+
+.user_menu {
+  position: absolute;
+  top: calc(100% + 10px);
+  right: -45px;
+  visibility: hidden;
+  max-height: 0;
+  opacity: 0;
+  background-color: #fff;
+  transition: all .4s ease;
+}
+
+.user_menu.open {
+  visibility: visible;
+  max-height: 10000px;
+  opacity: 1;
+  border-radius: 10px;
+  box-shadow: 0px 2px 12.6px 1.4px rgba(249, 172, 167, 0.26);
+}
+
+.user_menu ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.user_menu ul li a {
+  width: auto;
+  color: #000000;
+  font-size: 18px;
+  line-height: 20px;
+  text-align: left;
+  text-overflow: unset;
+  padding: 14px 24px;
+}
+
+.user_menu ul li.exit {
+  border-top: 1px solid#cc2c22;
+}
+
 .header__user-toggle {
   width: 26px;
   height: 26px;
