--- a/reviews/styles/scss/style.scss
+++ b/reviews/styles/scss/style.scss
@@ -7,6 +7,7 @@
 @import "../../../src/styles/navigation";
 @import "../../../src/styles/footer";
 @import "../../../src/styles/feedback";
+@import "../../../src/styles/call-modal";
 @font-face {
     font-family: "Cyrvetica";
     src: url("../../../src/fonts/Cyrvetica/Cyrvetica.woff") format("woff"), url("./fonts/Cyrvetica/Cyrvetica.ttf") format("truetype");
